// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableListing redirects on an invalid ref 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    />
  </div>
</DocumentFragment>
`;

exports[`TableListing redirects on an invalid ref 2`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    />
  </div>
</DocumentFragment>
`;

exports[`TableListing renders 1`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    />
  </div>
</DocumentFragment>
`;

exports[`TableListing renders 2`] = `
<DocumentFragment>
  <div
    class="card"
  >
    <div
      class="list-group list-group-flush"
    >
      <div
        class="list-group-item"
      >
        <a
          href="/tree/main/a"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M10 4H4c-1.1 0-1.99.9-1.99 2L2 18c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V8c0-1.1-.9-2-2-2h-8l-2-2z"
            />
          </svg>
          a
        </a>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
